--- a/app/views/users/spotify.html.erb
+++ b/app/views/users/spotify.html.erb
@@ -60,7 +60,7 @@
 
   <section id="typewriter5" class="hidden">
     <p>Ah ouais ? Marrant</p>
-    <p>Mais bien joué bg !</p>
+    <p>En tout cas, bien joué bg !</p>
   <br>
     <% recently = @recently_played.sample %>
     <p>C'est marrant que t'écoutes <em><%= recently.name %></em> !</p>
@@ -82,7 +82,7 @@
     <% end %>
   <br>
       <p>Tu veux en savoir encore plus sur tes goûts musicaux ?</p>
-      <p>Te voilà prêt.e à prendre connaissance du <span class="text-lavander">détail</span> de ton Spotify ?</p>
+      <p>Te voilà prêt.e à prendre connaissance du <z class="text-lavander">détail</z> de ton Spotify ?</p>
       <p>Toutes</p>
       <p>Tes</p>
       <p>Statistiques</p>
