--- a/app/views/users/spotify.html.erb
+++ b/app/views/users/spotify.html.erb
@@ -24,6 +24,8 @@
 
   </section>
 
+  <%= render 'shared/typing_indicator' %>
+
   <% if @top_artists.empty? %>
     <h2>Tu n'as aucune musique sur ton Spotify, n'hésite pas à plus l'utiliser !</h2>
 
@@ -83,10 +85,10 @@
   <br>
       <p>Tu veux en savoir encore plus sur tes goûts musicaux ?</p>
       <p>Te voilà prêt.e à prendre connaissance du <z class="text-lavander">détail</z> de ton Spotify ?</p>
-      <p>Toutes</p>
-      <p>Tes</p>
-      <p>Statistiques</p>
-      <p>Révélées au grand jour</p>
+      <p>toutes</p>
+      <p>tes</p>
+      <p>statistiques</p>
+      <p>révélées au grand jour</p>
   <br>
   </section>
 
