ça peut se pusher sur Héroku ça

--- a/app/views/users/spotify.html.erb
+++ b/app/views/users/spotify.html.erb
@@ -24,7 +24,7 @@
 
   </section>
 
-  <%= render 'shared/typing_indicator' %>
+<!-- <%= render 'shared/typing_indicator' %> -->
 
   <% if @top_artists.empty? %>
     <h2>Tu n'as aucune musique sur ton Spotify, n'hésite pas à plus l'utiliser !</h2>
