plus de pb de typo et plus de doublons

--- a/app/views/shared/_game.html.erb
+++ b/app/views/shared/_game.html.erb
@@ -2,11 +2,11 @@
 <div class="flex justify-end">
   <div class="flex justify-between w-2/5">
     <div id="toggle_pick1a" class="hidden flex flex-col items-center hvr-skew-forward m-2 p-3 border-2 border-dashed border-black border-opacity-100 rounded-lg shadow-inner-xl">
-      <p><%= jeu1.name %></p>
+      <center><p><%= jeu1.name %></p></center>
       <img src="<%= jeu1.album.images[2]["url"] %>" class="rounded-lg h-20">
     </div>
     <div id="toggle_pick1b" class="hidden flex flex-col items-center hvr-skew-backward m-2 p-3 border-2 border-dashed border-black border-opacity-100 rounded-lg shadow-inner-xl">
-      <p><%= jeu1.artists[0].name %></p>
+      <center><p><%= jeu1.artists[0].name %></p></center>
       <img src="<%= jeu1.artists[0].images.last["url"] %>" class="rounded-lg h-20">
     </div>
   </div>
@@ -20,11 +20,11 @@
 <div class="flex justify-end">
   <div class="flex justify-between w-2/5">
     <div id="toggle_pick2a" class="hidden flex flex-col items-center hvr-wobble-top m-2 p-3 border-2 border-dashed border-black border-opacity-100 rounded-lg shadow-inner-xl">
-      <p><%= jeu2.name %></p>
+      <center><p><%= jeu2.name %></p></center>
       <img src="<%= jeu2.album.images[2]["url"] %>" class="rounded-lg h-20">
     </div>
     <div id="toggle_pick2b" class="hidden flex flex-col items-center hvr-wobble-top border-2 m-2 p-3 border-dashed border-black border-opacity-100 rounded-lg shadow-inner-xl">
-      <p><%= jeu2.artists[0].name %></p>
+      <center><p><%= jeu2.artists[0].name %></p></center>
       <img src="<%= jeu2.artists[0].images.last["url"] %>" class="rounded-lg h-20">
     </div>
   </div>
@@ -38,11 +38,11 @@
 <div class="flex justify-end">
   <div class="flex justify-between w-2/5">
     <div id="toggle_pick3a" class="hidden flex flex-col items-center hvr-wobble-top m-2 p-3 border-2 border-dashed border-black border-opacity-100 rounded-lg shadow-inner-xl">
-      <p><%= jeu3.name %></p>
+      <center><p><%= jeu3.name %></p></center>
       <img src="<%= jeu3.album.images[2]["url"] %>" class="rounded-lg h-20">
     </div>
     <div id="toggle_pick3b" class="hidden flex flex-col items-center hvr-wobble-top m-2 p-3 border-2 border-dashed border-black border-opacity-100 rounded-lg shadow-inner-xl">
-      <p><%= jeu3.artists[0].name %></p>
+      <center><p><%= jeu3.artists[0].name %></p></center>
       <img src="<%= jeu3.artists[0].images.last["url"] %>" class="rounded-lg h-20">
     </div>
   </div>
