--- a/app/views/users/spotify.html.erb
+++ b/app/views/users/spotify.html.erb
@@ -2,8 +2,8 @@
   <section >
     <div id="typewriter1">
       <h1>Heyy <%= @name %> !</h1>
-      <p>Tu veux savoir à quel point ton Spotify est chouette ?</p>
-      <p>Attends un poil, que j'analyse un peu tout ça</p>
+      <p>Tu veux savoir à quel point ton Spotify est coolos ?</p>
+      <p>Attends un poil, que j'analyse tout ça</p>
       <p>Je suis un petit programme d'IA</p>
       <p>Et j'ai pour unique but de mettre de la <span class="text-lavander font-bold">douceur</span> dans ta journée</p>
     <br>
@@ -13,10 +13,10 @@
     <div class="flex justify-end">
       <div class="flex justify-between w-2/5">
         <div id="toggle_pick0a" class="hidden flex flex-col items-center hvr-wobble-top m-2 p-3 border-2 border-dashed border-black border-opacity-100 rounded-lg shadow-inner-xl">
-          <p>Au top du pops</p>
+          <center><p>Au top du pops 🐝</p></center>
         </div>
         <div id="toggle_pick0b" class="hidden flex flex-col items-center hvr-wobble-top m-2 border-2 p-3 border-dashed border-black border-opacity-100 rounded-lg shadow-inner-xl">
-          <p>Bah.. pas si ouf</p>
+          <center><p>Bah.. pas si ouf 😶</p></center>
         </div>
       </div>
     </div>
@@ -34,23 +34,46 @@
       <p>Ohhhhh !</p>
       <p>Sérieuuux ?</p>
       <p>Mais nan haha</p>
-      <% thas = @top_artists.sample %>
-      <% delete_element(@top_artists, thas) %>
-      <p>Tu écoutes aussi <span class="text-lilac font-bold"><%= thas.name %></span> ??</p>
+
+      <% artist1 = @top_artists.sample %>
+      <% delete_element(@top_artists, artist1) %>
+      <% delete_element(@most_underground, artist1) %>
+      <% delete_tracks(artist1) %>
+      <% delete_recent(artist1) %>
+
+      <p>Tu écoutes aussi <span class="text-lilac font-bold"><%= artist1.name %></span> ??</p>
       <p>Franchement, c'est archi cool je trouve!</p>
     <br>
-      <% this = @top_artists.sample %>
-      <% delete_element(@top_artists, this) %>
-      <p>Et <span class="text-peach font-bold"><%= this.name %></span>, meilleure musique <em><%= this.genres[0] %></em> du monde, nan ?</p>
+
+      <% artist2 = @top_artists.sample %>
+      <% delete_element(@top_artists, artist2) %>
+      <% delete_element(@most_underground, artist2) %>
+      <% delete_tracks(artist2) %>
+      <% delete_recent(artist2) %>
+
+      <p>Et <span class="text-peach font-bold"><%= artist2.name %></span>, meilleure musique <em><%= artist2.genres[0] %></em> du monde, nan ?</p>
     <br>
-      <% that = @top_tracks.sample %>
+
+      <% track1 = @top_tracks.sample %>
+      <% delete_element(@top_tracks, track1) %>
+      <% delete_element(@most_underground, track1.album.artists[0]) %>
+      <% delete_element(@top_artists, track1.album.artists[0]) %>
+      <% delete_element(@recently_played, track1) %>
+
       <p>Alleeeez !</p>
-      <p>Entre nous, <em><%= that.album.name %></em> de <span class="text-coral font-bold"><%= that.album.artists[0].name %></span>, best album de <%= that.album.release_date.slice(0..3) %> !</p>
+      <p>Entre nous, <em><%= track1.album.name %></em> de <span class="text-coral font-bold"><%= track1.album.artists[0].name %></span>, best album de <%= track1.album.release_date.slice(0..3) %> !</p>
     <br>
-      <% thot = @top_tracks.sample %>
+
+      <% track2 = @top_tracks.sample %>
+      <% delete_element(@top_tracks, track2) %>
+      <% delete_element(@most_underground, track2.album.artists[0]) %>
+      <% delete_element(@top_artists, track2.album.artists[0]) %>
+      <% delete_element(@recently_played, track2) %>
+
       <p>Ahh, je te reconnais bien là</p>
-      <p>Fin.e connaisseur.se de <em><%= thot.artists[0].genres[0] %></em> héhé</p>
-      <p>Comment tu as découvert <span class="text-apricot font-bold"><%= thot.artists[0].name %></span> ?</p>
+      <p>Fin.e connaisseur.se de <em><%= track2.artists[0].genres[0] %></em> héhé</p>
+      <p>J'adoooore <em><%= track2.name %></em> !</p>
+      <p>Comment tu as découvert <span class="text-apricot font-bold"><%= track2.artists[0].name %></span> ?</p>
     <br>
       <h2>Viens on joue à un jeu ! Qui de l'oeuf ou de la poule ?</h2>
       <p>Tu vas voir, c'est tout simple</p>
@@ -61,34 +84,39 @@
   <%= render 'shared/game' %>
 
   <section id="typewriter5" class="hidden">
-    <p>Ah ouais ? Marrant</p>
+    <p>Ah ouais ? Intéressant !</p>
     <p>En tout cas, bien joué bg !</p>
   <br>
-    <% recently = @recently_played.sample %>
-    <p>C'est marrant que t'écoutes <em><%= recently.name %></em> !</p>
-    <p>J'écoutais justement un peu de <%= recently.artists[0].genres[0] %> !</p>
+
+    <% recent_track1 = @recently_played.sample %>
+    <% delete_element(@most_underground, recent_track1.album.artists[0]) %>
+
+    <p>C'est marrant que t'écoutes <em><%= recent_track1.name %></em> !</p>
+    <p>J'écoutais justement un peu de <em><%= recent_track1.artists[0].genres[0] %></em> !</p>
   <br>
-    <p>T'as déjà écouté <span class="text-pea font-bold"><%= @most_underground[3].name %></span> ?</p>
+
+    <% underground_artist1 = @most_underground[0..9].sample %>
+    <p>T'as déjà écouté <span class="text-pea font-bold"><%= underground_artist1.name %></span> ?</p>
     <p>Who, pourtant y'en a pas grand monde qui connait !</p>
     <p>Bravo pour ton ouverture d'oreille 🤗</p>
   <br>
-    <p>Au vu de ce que tu écoutes, tu retournerai bien en <em><%= @stuck_years %></em> ! </p>
+    <p>Au vu de ce que tu écoutes, tu retournerais bien en <em><%= @stuck_years %></em> ! </p>
     <p>Tu m'étonnes, y'a quand même eu l'album de <span class="text-baby-blue"><%= @stuck_years_artist %></span> </p>
   <br>
     <% if @original_complex < 51 %>
       <p>Whawww je suis bluffé !</p>
       <p>Ton Spotify est composé à <span class="text-coral"><%= (100 - @original_complex) %>%</span> de contenu <span class="text-lavander">o</span><span class="text-lilac">r</span><span class="text-peach">i</span><span class="text-coral">g</span><span class="text-apricot">i</span><span class="text-pea">n</span><span class="text-baby-blue">a</span><span class="text-lavander">l</span></p>
-      <p>Bravo!</p>
+      <p>Bravo !</p>
       <p>Où puises-tu ton inspiration ?</p>
       <p>J'espère que tu partages tes découvertes ! </p>
     <% end %>
   <br>
       <p>Tu veux en savoir encore plus sur tes goûts musicaux ?</p>
-      <p>Te voilà prêt.e à prendre connaissance du <z class="text-lavander">détail</z> de ton Spotify ?</p>
-      <p>toutes</p>
+      <p>Tu te sens prêt.e à prendre connaissance du <z class="text-lavander">détail</z> de ton Spotify ?</p>
+      <p>Toutes</p>
       <p>tes</p>
       <p>statistiques</p>
-      <p>révélées au grand jour</p>
+      <p>révélées au grand jour ?</p>
   <br>
   </section>
 
