--- a/app/views/shared/_typing_indicator.html.erb
+++ b/app/views/shared/_typing_indicator.html.erb
@@ -1,4 +1,4 @@
-<div class="flex justify-center content-around px-7 py-2 bg-gray-300 w-8 rounded-xl">
+<div class="flex justify-center content-around mt-3 px-7 py-2 bg-gray-300 w-8 rounded-xl">
   <div id="r1" class="p-1 bg-gray-400 rounded-full"></div>
   <div id="r2" class="ml-1 p-1 bg-gray-400 rounded-full"></div>
   <div id="r3" class="ml-1 p-1 bg-gray-400 rounded-full"></div>
