--- a/app/views/users/spotify.html.erb
+++ b/app/views/users/spotify.html.erb
@@ -24,7 +24,6 @@
 
   </section>
 
-<!-- <%= render 'shared/typing_indicator' %> -->
 
   <% if @top_artists.empty? %>
     <h2>Tu n'as aucune musique sur ton Spotify, n'hésite pas à plus l'utiliser !</h2>
@@ -83,6 +82,10 @@
 
   <%= render 'shared/game' %>
 
+<!--   <div id="typing_indicator2" class="hidden">
+    <%= render 'shared/typing_indicator' %>
+  </div> -->
+
   <section id="typewriter5" class="hidden">
     <p>Ah ouais ? Intéressant !</p>
     <p>En tout cas, bien joué bg !</p>
@@ -120,6 +123,13 @@
   <br>
   </section>
 
+<!--   <div id="typing_indicator3" class="hidden">
+    <%= render 'shared/typing_indicator' %>
+  </div> -->
+
+  <div id="typing_indicator1" class="hidden">
+    <%= render 'shared/typing_indicator' %>
+  </div>
   <%= render 'shared/stats_final' %>
 
 
