scroll qui scroll quand on veuuut

--- a/app/views/shared/_stats_final.html.erb
+++ b/app/views/shared/_stats_final.html.erb
@@ -72,6 +72,6 @@
   <p>J'espère que tu as également apprécié ma <em>compagnie</em></p>
   <p>N'hésite pas à me partager avec des copains si tu as <em>aimé</em> l'expérience !</p>
 <br>
-  <p>Bonne journée, prends soin de toi 🍀</p>
-  <p class="text-xl"><span class="text-pea">B</span><span class="text-baby-blue">i</span><span class="text-lavander">s</span><span class="text-lilac">o</span><span class="text-peach">u</span><span class="text-coral">s</span> <span class="text-apricot">à</span> <span class="text-pea">t</span><span class="text-baby-blue">o</span><span class="text-lavander">i</span></p>
+  <p>Bonne journée, prends soin de toi</p>
+  <p class="text-xl"><span class="text-pea">B</span><span class="text-baby-blue">i</span><span class="text-lavander">s</span><span class="text-lilac">o</span><span class="text-peach">u</span><span class="text-coral">s</span> <span class="text-apricot">à</span> <span class="text-pea">t</span><span class="text-baby-blue">o</span><span class="text-lavander">i</span> 🍀</p>
 </section>
