quelques dernières modifs

--- a/app/views/users/spotify.html.erb
+++ b/app/views/users/spotify.html.erb
@@ -76,7 +76,7 @@
     <br>
       <h2>Viens on joue à un jeu ! Qui de l'oeuf ou de la poule ?</h2>
       <p>Tu vas voir, c'est tout simple</p>
-      <p>Qu'as-tu découvert en premier ?</p>
+      <p>Qu'as-tu découvert en premier ? La chanson ou l'artiste ?</p>
     </section>
 
 
@@ -110,10 +110,11 @@
   <br>
       <p>Tu veux en savoir encore plus sur tes goûts musicaux ?</p>
       <p>Tu te sens prêt.e à prendre connaissance du <z class="text-lavander">détail</z> de ton Spotify ?</p>
-      <p>Toutes</p>
+      <p>toutes</p>
       <p>tes</p>
       <p>statistiques</p>
-      <p>révélées au grand jour ?</p>
+      <p>révélées</p>
+      <p>au grand jour ?</p>
   <br>
   </section>
 
